[metadata]
name = mikedoc
version = file: VERSION
url = https://pyrustic.github.com
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Neat docstring format for building API references
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    docs
    docstring
    documentation
    docs-generator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Documentation
    Intended Audience :: Developers

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    braq
    paradict

[options.entry_points]
console_scripts =
    mikedoc = mikedoc.__main__:main
